# repr-preference-optimization

./: .gitignore  CLAUDE.md  README.md  boostrap.sh  cli.py  configs.py  data_loader.py  evaluate.py  justfile  profile_output.prof  pyproject.toml  pyproject.toml.bk  research_journal.md  run.sh  sweep.txt  train.py  train_lightning.py  trainers.py
.claude/: settings.local.json
configs/: dev.yaml  dev1b.yaml  llama-3-2-1b.yaml  llama-3-2-1b_a100.yaml  llama-3-2-3b_a100.yaml  llama-3-7b_a100.yaml  llama3_7b.yaml  smol.yaml  tinyllama.yaml  tinyllama_a100.yaml
docs/: research_journal.1.md  research_journal.md
docs/img/: research_journal.md
docs/tmp/: trl_dpo.py
docs/tmp/original/: trainer.py
nbs/: 01_hf.ipynb  01b_hf_alphalow.ipynb  02_hf_cka.ipynb  02_hf_direction_TODO.ipynb  02_hf_direction_good.ipynb  02_hf_topk.ipynb  03_wd_TODO.ipynb  04_hf_cka.ipynb  04_hf_cka_fail.ipynb  05_hf_topk.ipynb  06_hf_topk.ipynb  07_hf_direction_TODO.ipynb  07_hf_dpo.ipynb  07_hf_regular_TODO.ipynb  07_hf_topkGOOD.ipynb  07_hf_topk_TODO.ipynb  07_hf_wd.ipynb  08_hf_topk_TODO.ipynb  09_hf_phi_boft_rr_retain.ipynb  09_hf_phi_oft_rr copy.ipynb  09_hf_phi_oft_rr.ipynb  09_hf_phi_oft_rr_retain.ipynb  09_hf_refular.ipynb  09_hf_symlog_TODO.ipynb  100_scratch_loss.ipynb  101_scratch_svd.ipynb  101_scratch_tok.ipynb  102_scratch_table.ipynb  103_scratch_loss.ipynb  104_scratch_hs.ipynb  105_log.ipynb  105_read_results_and_log.ipynb  105_read_results_and_log3.ipynb  105_scratch_grad.ipynb  106_ax.ipynb  106_hpopt_ax_ether_prefvec.ipynb  106_read_eval.ipynb  107_ds_lengths.ipynb  107_hpopt_ax_transform.ipynb  107_len_ds.ipynb  (+48 more)
nbs/old/: 12_hf_phi_oft detach.ipynb  12_hf_phi_oft.ipynb  12_hf_phi_oft_quantileh.ipynb  21_scratch_ex_hs_repr3.ipynb
nbs/output-dir-dpo/: README.md  adapter_model.safetensors.REMOVED.git-id
nbs/output-dir-dpo/dpo/: adapter_config.json  adapter_model.safetensors
reprpo/: cli.py  config.py  evaluate.py  experiments.py  gen.py  silence.py  simple_cli.py  train.py  train_lightning.py  trainer.py  training.py
reprpo/ax/: parameters.py  target.py
reprpo/data/: collate.py  collate2.py  collate3.py  datamodule.py  eval_sets.py  tqa.py  util.py
reprpo/eval/: dpo.py  evaluate_delete.py  gen.py  mc.py
reprpo/helpers/: adapters.py  hist.py  lightning_existing_bnb.py  lightning_hist.py  lightning_save.py  logging.py  pl_gen.py  quantile.py  scheduler.py  shypothesis.py  svd_decomposer.py  torch.py  tracedict.py  tyro.py  wandb.py  wandb_utils.py
reprpo/hp/: helpers.py  space.py  space_super.py  target.py  wandb.py
reprpo/interventions/: __init__.py  config.py  dpo.py  dpo_helpers.py  dpo_projbp.py  dpo_projgrad copy.py  dpo_projgrad.py  helpers.py  pl_base.py  reprpo.py  reprpo_ether.py  reprpo_hra.py  reprpo_hs.py  reprpo_hs_dist.py  reprpo_hsdist.py  reprpo_svd.py  types.py
reprpo/interventions/losses/: __init__.py  helpers.py  innerdpo.py  innerpo.py  mse.py  prefvec.py  rank.py  topk.py  topkl.py
reprpo/interventions/reprpo/: config.py  helpers.py  model.py
reprpo/interventions/transforms/: __init__.py  ether.py  helpers.py  hra.py  none.py  ortho.py  supressed.py  svd.py
reprpo/layers/: ether.py  hra.py
reprpo/lightning/: lightning_save_rm.py  pl_gen.py
reprpo/models/: load.py
reprpo/train/: __init__.py  dpo.py  lightning.py  pl_base.py  reprpo_ether.py  reprpo_hra.py  reprpo_hra_gsa.py  reprpo_hra_kl.py  reprpo_hs.py  reprpo_hs_dist.py  reprpo_hs_kl.py  reprpo_hs_kl2.py  reprpo_hsdist.py  reprpo_ortho.py  reprpo_side.py  reprpo_side_dist.py  reprpo_side_ether.py  reprpo_side_hra.py  reprpo_svd.py  side_channels.py  trainer.py
scripts/: bootstrap_runpod_a100.sh  export_experiments.py  modal_ai.py  model.py  run_experiments.py  run_experiments_in_mp.py  run_optuna.py  run_optuna_super.py  sweep.py  sweep.sh.j2  train.py
tests/: test_dev.py  test_methods.py  test_optuna.py
