[project]
name = "innerpo"
version = "0.1.0"
description = "Inner Preference Optimization - Aligning hidden states for better generalization"
readme = "README.md"
requires-python = ">=3.10"
urls = { Repository = "https://github.com/wassname/innerpo" }

dependencies = [
    # Core ML libraries
    "torch>=2.0",
    "transformers>=4.30.0",
    "peft>=0.4.0",
    "datasets>=2.0.0",
    
    # Utilities
    "numpy>=1.20.0",
    "tqdm>=4.60.0",
    "wandb>=0.15.0",
    
    # Optional acceleration
    "accelerate>=0.20.0",
    "bitsandbytes>=0.40.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.0.0",
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]
lightning = [
    "lightning>=2.0.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
baukit = { git = "https://github.com/davidbau/baukit.git" }
open-pref-eval = { path = "../open_pref_eval" }
# baukit = { git = "https://github.com/wassname/baukit.git" }
#open-pref-eval = { git = "https://github.com/wassname/open_pref_eval" }
